<resources>
    <string name="app_name">ParseInstagram</string>
    <string name="username">Username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="description">Description</string>
    <string name="capture_image">Capture Image</string>
    <string name="post">Post</string>
    <string name="image_to_post">Image to Post</string>
    <string name="post_image">Post Image</string>
    <string name="sign_up">Sign Up</string>
    <string name="home">Home</string>
    <string name="compose">Compose</string>
</resources>
